adding to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+CS/CS 250/Assignment 4/invesments_driver.exe
+CS/CS 250/Assignment 4/invesments_driver.o
+CS/CS 250/Assignment 4/Investments.exe
