--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ pip-log.txt
 CS/CS 250/Assignment 4/invesments_driver.exe
 CS/CS 250/Assignment 4/invesments_driver.o
 CS/CS 250/Assignment 4/Investments.exe
+*.exe
+*.o
